--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <title>Rock, Paper, Scissor</title>
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="buttons">
+      <button>Rock!</button>
+      <button>Paper!</button>
+      <button>Scissor!</button>
+    </div>
+  </body>
 </html>
