--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock, Paper, Scissor</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="buttons">
-      <button>Rock!</button>
-      <button>Paper!</button>
-      <button>Scissor!</button>
+    <div class="background">
+      <div class="container">
+        <div class="scores">
+          <h1 class="score_player" id="userScore">0</h1>
+          <h1>-</h1>
+          <h1 class="score_computer" id="machineScore">0</h1>
+        </div>
+        <div class="buttons">
+          <a class="button" id="rock">Rock!</a>
+          <a class="button" id="paper">Paper!</a>
+          <a class="button" id="scissor">Scissor!</a>
+        </div>
+        <div class="play_button">
+          <a class="play_btn" id="playBtn">Play!</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
